--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/header_title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-
-        android:text="Hello"
-        />
     
     <LinearLayout
         android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="parent
-">
-
-
+        app:layout_constraintTop_toBottomOf="parent">
 
     <Button
         android:id="@+id/CameraButton"
@@ -38,7 +28,14 @@
         android:layout_height="wrap_content"
         android:text="Get images"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear"/>
+
     </LinearLayout>
+
+
     <ImageView
         android:id="@+id/PictureView"
         android:layout_width="wrap_content"
